# orchestrate-codex

./: .gitignore  .mcp.json  LICENSE  README.md  mcp_config.json  plugin.json  pyproject.toml
.claude/skills/orchestrate/: SKILL.md
.codex-plugin/: plugin.json
docs/: ARCHITECTURE.md
orchestrate_codex/: __init__.py  broker.py  catalog.py  errors.py  gather.py  leaf_client.py  leaves.py  mcp_server.py  policy.py  recipes.py  runner.py  store.py  verify.py
scripts/: orchestrate_codex_mcp.py
skills/orchestrate/: SKILL.md
tests/: conftest.py  mock_leaf.py  test_broker.py  test_core.py  test_schema_contract.py
