[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orchestrate-codex"
version = "0.5.1"
description = "Provider-neutral recipe orchestration MCP for Codex multi-provider leaves."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Park Chanwoo" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.12"]

[project.scripts]
orchestrate-codex-mcp = "orchestrate_codex.mcp_server:serve"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["orchestrate_codex*"]
